<resources>
    <string name="app_name">My Habits</string>
    <string name="hint_habit_name">Название</string>
    <string name="habit_name">Название</string>
    <string name="description">Описание</string>
    <string name="first_option">Полезная</string>
    <string name="second_option">Бесполезная</string>
    <string name="priority_text">Приоритет</string>
    <string name="text_period">Повторять</string>
    <string name="text_frequency">раз в</string>
    <string name="text_days">дней</string>
    <string name="bad_habit">Вредная</string>
    <string name="good_habit">Полезная</string>
    <string name="bad_habits">Вредные</string>
    <string name="good_habits">Полезные</string>
    <string name="normal_habit">Нормальная</string>
    <string name="information">Информация</string>
    <string name="habits">Привычки</string>
    <string name="greeting">Привет! Это приложение "Мои привычки", в котором ты можешь добавлять и отслеживать свои хорошие или плохие привычки :)</string>
    <string name="type_text">Тип</string>
    <string name="open_drawer" />
    <string name="close_drawer" />
    <string name="often_text">Периодичность</string>
    <string name="delete_button">Удалить</string>
    <string name="error_text">Заполните все поля</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Мои привычки</string>
    <string name="nav_header_subtitle">alexic605@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="repeat">Повторять</string>
    <string name="in">в</string>
    <string name="high">Высокий</string>
    <string name="medium">Средний</string>
    <string name="low">Низкий</string>



    <string-array name="sort_parameters">
        <item>Дата добавления</item>
        <item>Частота</item>
        <item>Приоритет</item>
    </string-array >

    <string-array name="priorities">
        <item>Низкий</item>
        <item>Средний</item>
        <item>Высокий</item>
    </string-array >

    <plurals name="times">
        <item quantity="zero">%1$d дней</item>
        <item quantity="one">%1$d дней</item>
        <item quantity="two">%1$d дней</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дня</item>
    </plurals>

    <plurals name="count">
        <item quantity="zero">%1$d раз</item>
        <item quantity="one">%1$d раз</item>
        <item quantity="two">%1$d раза</item>
        <item quantity="few">%1$d раз</item>
        <item quantity="many">%1$d раз</item>
        <item quantity="other">%1$d раза</item>
    </plurals>

</resources>