<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    >

    <ScrollView
        android:id="@+id/scrollView2"
        style="@style/Base.CardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/scrollView2"
        app:layout_anchorGravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin">

            <EditText
                android:id="@+id/edit_habit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/habit_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/normal_margin"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="Описание"

                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_habit_name" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="184dp"
                android:layout_height="122dp"
                android:layout_marginBottom="@dimen/large_margin"
                app:layout_constraintBottom_toTopOf="@+id/habit_frequency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habit_current_type">

                <RadioButton
                    android:id="@+id/first_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/good_habit" />

                <RadioButton
                    android:id="@+id/second_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/bad_habit" />

            </RadioGroup>


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/priorities"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/text_priority" />

            <TextView
                android:id="@+id/text_priority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/priority_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/edit_description" />

            <TextView
                android:id="@+id/habit_current_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:gravity="start"
                android:text="@string/type_text"
                app:layout_constraintEnd_toStartOf="@+id/text_priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_description" />


            <TextView
                android:id="@+id/habit_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="28dp"
                android:text="@string/often_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/edit_times"
                android:layout_width="32dp"
                android:layout_height="44dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:maxLength="3"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintStart_toEndOf="@+id/textView2" />

            <EditText
                android:id="@+id/edit_frequency"
                android:layout_width="30dp"
                android:layout_height="39dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:maxLength="3"
                app:layout_constraintBottom_toBottomOf="@+id/edit_times"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/edit_times"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/delete_button"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_frequency"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/text_period"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habit_frequency" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_frequency"
                app:layout_constraintStart_toEndOf="@+id/edit_times"
                app:layout_constraintTop_toTopOf="@+id/edit_times" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginEnd="180dp"
                android:layout_marginRight="168dp"
                android:text="@string/text_days"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/edit_frequency"
                app:layout_constraintTop_toTopOf="@+id/edit_times"
                app:layout_constraintVertical_bias="1.0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/color_button"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginTop="88dp"
                android:layout_marginRight="@dimen/large_margin"
                android:background="@drawable/roundedbutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="104dp"
                android:layout_marginLeft="104dp"
                android:layout_marginTop="88dp"
                android:text="Выбрать цвет"
                app:layout_constraintStart_toEndOf="@+id/habit_frequency"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        app:backgroundTint="#76ED7B"
        app:borderWidth="5dp"
        app:layout_constraintBottom_toTopOf="@+id/errorText"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="lollipop" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>