<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" layout_height="">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin">

            <EditText
                android:id="@+id/edit_habit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/habit_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/normal_margin"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descrip"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_habit_name" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="184dp"
                android:layout_height="122dp"
                android:layout_marginBottom="@dimen/large_margin"
                app:layout_constraintBottom_toTopOf="@+id/textFrequency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textType">

                <RadioButton
                    android:id="@+id/first_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="Полезная" />

                <RadioButton
                    android:id="@+id/second_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="Вредная" />

            </RadioGroup>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:entries="@array/priorities"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/text_priority" />

            <TextView
                android:id="@+id/text_priority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/priority_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/edit_description" />

            <TextView
                android:id="@+id/textType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:gravity="start"
                android:text="@string/type_text"
                app:layout_constraintEnd_toStartOf="@+id/text_priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_description" />

            <TextView
                android:id="@+id/textFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:text="@string/often_text"
                app:layout_constraintBottom_toTopOf="@+id/edit_times"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/edit_times"

                android:layout_width="21dp"
                android:layout_height="39dp"
                android:layout_marginStart="108dp"
                android:layout_marginLeft="108dp"
                android:layout_marginBottom="28dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_frequency"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/edit_times"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.379"
                app:layout_constraintStart_toEndOf="@+id/edit_times"
                app:layout_constraintTop_toTopOf="@+id/edit_times"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/errorText"
                app:layout_constraintEnd_toStartOf="@+id/edit_frequency"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_margin"
                android:text="@string/error_text"
                android:textColor="@color/design_default_color_error"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.527"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:text="Повторять"
                app:layout_constraintEnd_toStartOf="@+id/edit_times"
                app:layout_constraintTop_toBottomOf="@+id/textFrequency" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:borderWidth="5dp"
        android:elevation="10dp"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/errorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/checkbox_on_background" tools:targetApi="lollipop"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>